--- a/SmartMoveWebApp/Views/TruckOwners/ShareWithFriend.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/ShareWithFriend.cshtml
@@ -19,27 +19,16 @@
                         <div class="col-lg-12 text-center">
                             <img class="share-image" src="~/Content/images/share_icon.png" />
                         </div>
-                        <div class="row col-lg-12" style="margin-bottom: 5px;">
-                            <div class="col-lg-2">
-                                <h5>Promo Code</h5>
-                            </div>
-                            <div class="col-lg-7">
-                                <input type="text" style="width: 100%;" value="ABC123xyz" id="myCode" disabled>
-                            </div>
-                            <div class="col-lg-2">
-                                <input type="button" class="btn-info" id="btnCode" onclick="copyToClipboard('#myCode')" value="Copy Code" />
-                            </div>
-                        </div>
                         <div class="row col-lg-12">
                             <div class="col-lg-2">
                                 <h5>Invite Link</h5>
                             </div>
                             <div class="col-lg-7">
-                                <input type="text" style="width: 100%;" value="https://www.SmartMove.com/invite/ABC123xyz" id="myLink" disabled>
+                                <input type="text" style="width: 100%;" value="https://smartmoveweb.azurewebsites.net/" id="myLink" disabled>
                             </div>
-                            <div class="col-lg-2">
+                            @*<div class="col-lg-2">
                                 <input type="button" class="btn-info" value="Copy Link" />
-                            </div>
+                            </div>*@
                         </div>
                     </div>
                 </div>
