Registration bug fix and Error Page trial update

--- a/SmartMoveWebApp/Views/Shared/Error.cshtml
+++ b/SmartMoveWebApp/Views/Shared/Error.cshtml
@@ -2,12 +2,16 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>Error</title>
+    <title>System Error</title>
 </head>
 <body>
     <hgroup>
         <h1>Oops. Something went wrong!</h1>
         <h2>An error occurred while processing your request.</h2>
     </hgroup>
+    <div class="jumbotron">
+        <h1>Oops. Something went wrong!</h1>
+        <h2>An error occurred while processing your request.</h2>
+    </div>
 </body>
 </html>
