--- a/SmartMoveWebApp/Views/Shared/_CustomersLayout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_CustomersLayout.cshtml
@@ -61,7 +61,14 @@
                                     <ul class="nav nav-tabs" id="myMenu" role="tablist">
                                         <li class="nav-item" style="background-color: transparent;">
                                             <div class="profile-icon m-auto">
-                                                <img src="~/Content/images/team/default-profile-picture.png" alt="Profile Picture" />
+                                                @if (String.IsNullOrEmpty(ViewBag.ProfilePictureURL))
+                                                {
+                                                    <img src="~/Content/images/team/default-profile-picture.png" alt="Profile Picture" />
+                                                }
+                                                else
+                                                {
+                                                    <img src="@ViewBag.ProfilePictureURL" alt="Profile Picture" />
+                                                }
                                             </div>
                                         </li>
                                         <li class="nav-item">
