--- a/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
@@ -17,7 +17,7 @@
                         <div class="row col-lg-12 profile-title">
                             <h4>General Information</h4>
                         </div>
-                        <div class="row col-lg-12 text-left profile-title">
+                        <div class="row col-lg-12 text-left">
                             <div class="col-lg-2">
                                 <h5>First Name</h5>
                             </div>
@@ -31,7 +31,7 @@
                                 <p>@Model.LastName</p>
                             </div>
                         </div>
-                        <div class="row col-lg-12 text-left profile-title">
+                        <div class="row col-lg-12 text-left">
                             <div class="col-lg-2">
                                 <h5>Phone</h5>
                             </div>
@@ -42,11 +42,11 @@
                                 <h5>Address</h5>
                             </div>
                             <div class="col-lg-4">
-                                <span>@Model.Address1</span><br />
-                                <span>@Model.Address2</span>
+                                <p>@Model.Address1<br />
+                                @Model.Address2</p>
                             </div>
                         </div>
-                        <div class="row col-lg-12 text-left profile-title">
+                        <div class="row col-lg-12 text-left">
                             <div class="col-lg-2">
                                 <h5>Zip Code</h5>
                             </div>
