--- a/SmartMoveWebApp/Views/Customers/EditProfile.cshtml
+++ b/SmartMoveWebApp/Views/Customers/EditProfile.cshtml
@@ -12,52 +12,39 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="team-member-info">
-                        <h3 class="text-center">Edit Your Customer Profile</h3>
-                        <h6 class="text-center">Note: Required fields are marked with <span style="color:red">*</span></h6>
-                        <hr />
+                        <h4 class="text-center">Edit Your Customer Profile</h4>
+                        <h5 class="text-center">Note: Required fields are marked with <span style="color:red">*</span></h5>
+                        
                         @using (Html.BeginForm("EditProfile", "Customers", FormMethod.Post, new { enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
                             @Html.HiddenFor(m => m.CustomerId)
 
-                            <div class="row col-lg-12 profile-title">
-                                <h6>Update Profile Picture</h6>
+                            <div class="col-lg-12 profile-title">
+                                <h4>Update Profile Picture</h4>
                             </div>
-                            <div class="form-group col-md-6">
+                            <div class="row form-group col-md-6">
                                 @Html.LabelFor(m => m.ProfilePictureURL)
                                 @Html.TextBoxFor(m => m.ProfilePictureURL, new { @class = "form-control", type = "file" })
                                 @Html.ValidationMessageFor(m => m.ProfilePictureURL)
                             </div>
-                            <div class="row col-lg-12 profile-title">
-                                <h6>General Information</h6>
-                            </div>
-                            <div class="name">
-                                <div class="row">
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            @Html.LabelFor(m => m.FirstName)<span style="color:red">*</span>
-                                            @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name *" })
-                                            @Html.ValidationMessageFor(m => m.FirstName)
-                                        </div>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <div class="form-group">
-                                            @Html.LabelFor(m => m.LastName)<span style="color:red">*</span>
-                                            @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name *" })
-                                            @Html.ValidationMessageFor(m => m.LastName)
-                                        </div>
-                                    </div>
-                                </div>
+                            <div class="col-lg-12 profile-title">
+                                <h4>General Information</h4>
                             </div>
                             <div class="row">
                                 <div class="col-md-6">
                                     <div class="form-group">
-                                        @Html.LabelFor(m => m.Phone)<span style="color:red">*</span>
-                                        @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number *" })
-                                        @Html.ValidationMessageFor(m => m.Phone)
+                                        @Html.LabelFor(m => m.FirstName)<span style="color:red">*</span>
+                                        @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", placeholder = "First Name *" })
+                                        @Html.ValidationMessageFor(m => m.FirstName)
                                     </div>
                                 </div>
                                 <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.LastName)<span style="color:red">*</span>
+                                        @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", placeholder = "Last Name *" })
+                                        @Html.ValidationMessageFor(m => m.LastName)
+                                    </div>
                                 </div>
                             </div>
                             <div class="row">
@@ -101,6 +88,11 @@
                                     </div>
                                 </div>
                                 <div class="col-md-6">
+                                    <div class="form-group">
+                                        @Html.LabelFor(m => m.Phone)<span style="color:red">*</span>
+                                        @Html.TextBoxFor(m => m.Phone, new { @class = "form-control", placeholder = "Phone Number *" })
+                                        @Html.ValidationMessageFor(m => m.Phone)
+                                    </div>
                                 </div>
                             </div>
                             <div class="log-btn">
