Contact Us and other UI bugs

--- a/SmartMoveWebApp/Views/TruckOwners/Login.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Login.cshtml
@@ -42,7 +42,7 @@
                     <div class="login-menu">
                         <a href="@Url.Action("About", "Home")">About</a>
                         <span>|</span>
-                        <a href="@Url.Action("Contact", "Home")">Contact</a>
+                        <a href="@Url.Action("Contact", "Home")">Contact Us</a>
                     </div>
                 </div>
             </div>
