--- a/SmartMoveWebApp/Views/Home/Contact.cshtml
+++ b/SmartMoveWebApp/Views/Home/Contact.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@model SmartMoveWebApp.Models.ViewModels.ContactUsEmailViewModel
+@{
     ViewBag.Title = "Contact us";
 }
 
@@ -21,49 +22,50 @@
 <!--== Contact Page Area Start ==-->
 <div class="contact-page-wrap section-padding">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-9 m-auto">
-                <div class="contact-form">
-                    <form action="index.html">
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6">
-                                <div class="name-input">
-                                    <input type="text" placeholder="Full Name">
+        @using (Html.BeginForm("Contact", "Home"))
+        {
+            <div class="row">
+                <div class="col-lg-9 m-auto">
+                    <div class="contact-form">
+                        <form action="index.html" name="sendMessage" id="contactForm">
+                            <div class="row">
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="name-input">
+                                        @Html.TextBoxFor(m => m.FullName, new { @class = "form-control", placeholder = "Full Name" })
+                                        @Html.ValidationMessageFor(m => m.FullName)
+                                    </div>
+                                </div>
+
+                                <div class="col-lg-6 col-md-6">
+                                    <div class="email-input">
+                                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = "Email Address" })
+                                        @Html.ValidationMessageFor(m => m.Email)
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-6 col-md-6">
-                                <div class="email-input">
-                                    <input type="email" placeholder="Email Address">
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-lg-6 col-md-6">
-                                <div class="website-input">
-                                    <input type="url" placeholder="Website">
+                            <div class="row">
+                                <div class="col-lg-12">
+                                    <div class="subject-input">
+                                        @Html.TextBoxFor(m => m.Subject, new { @class = "form-control", placeholder = "Subject" })
+                                        @Html.ValidationMessageFor(m => m.Subject)
+                                    </div>
                                 </div>
                             </div>
 
-                            <div class="col-lg-6 col-md-6">
-                                <div class="subject-input">
-                                    <input type="text" placeholder="Subject">
-                                </div>
+                            <div class="message-input">
+                                @Html.TextAreaFor(model => model.Message, 10, 30, new { @class = "form-control", placeholder = "Message" })
+                                @Html.ValidationMessageFor(m => m.Message)
                             </div>
-                        </div>
 
-                        <div class="message-input">
-                            <textarea name="review" cols="30" rows="10" placeholder="Message"></textarea>
-                        </div>
-
-                        <div class="input-submit">
-                            <button type="submit">Submit Message</button>
-                        </div>
-                    </form>
+                            <div class="input-submit">
+                                <button type="submit">Submit Message</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-        </div>
+        }
     </div>
 </div>
 <!--== Contact Page Area End ==-->
@@ -75,7 +77,7 @@
 @section  Scripts
 {
     <script>
-        $(document).ready(function(){
+        $(document).ready(function () {
             $('nav.mainmenu ul li.active').removeClass('active');
             $("#contactLink").addClass('active');
         });
