--- a/SmartMoveWebApp/Views/Home/Index.cshtml
+++ b/SmartMoveWebApp/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Welcome to";
+    ViewBag.Title = "Home";
 }
 
 
@@ -56,7 +56,6 @@
 
                             <p>SmartMove works according to the needs and requirement of the customers who request services and who accept a bids and provides to them data to make contact with qualified truck owners (and drivers) who provide the desired results. SmartMove makes sure that all goods remain in a safe condition during transit and they will be delivered safely at their destination.</p>
                             <div class="about-btn">
-                                <a href="@Url.Action("Login", "Customers")">Book Your Service</a>
                                 <a href="@Url.Action("Contact", "Home")">Contact Us</a>
                             </div>
                         </div>
@@ -156,11 +155,11 @@
                 <div class="single-pricing-table">
 
                     <ul class="package-list">
-                        <li>Track Your Truck Location</li>
                         <li>Free Registration</li>
-                        <li>24*7 Support</li>
-                        <li>Multi Choice Payment Option</li>
+                        <li>Get Bids for Your Order</li>
                         <li>Make Your Own Profile</li>
+                        <li>24*7 Support</li>
+                        <li>Multi Choice Third Party Payment Option</li>
                     </ul>
                 </div>
             </div>
