--- a/SmartMoveWebApp/Content/style.css
+++ b/SmartMoveWebApp/Content/style.css
@@ -1836,7 +1836,7 @@ body,
 .contact-form textarea,
 .review-area textarea {
     background-color: #fafafa;
-    border: 1px solid #eaeaea;
+    border: 1px solid black;
     color: #000;
     padding: 8px 15px;
     resize: none;
