--- a/SmartMoveWebApp/Views/EmailTemplates/EmailVerificationTemplate.html
+++ b/SmartMoveWebApp/Views/EmailTemplates/EmailVerificationTemplate.html
@@ -4,7 +4,7 @@
 
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Password Reset</title>
+    <title>Email Verification</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style type="text/css">
              /**
@@ -100,7 +100,7 @@
 
     <!-- start preheader -->
     <div class="preheader" style="display: none; max-width: 0; max-height: 0; overflow: hidden; font-size: 1px; line-height: 1px; color: #fff; opacity: 0;">
-        A preheader is the short summary text that follows the subject line when an email is viewed in the inbox.
+        
     </div>
     <!-- end preheader -->
     <!-- start body -->
@@ -118,7 +118,7 @@
                     <tr>
                         <td align="center" valign="top" style="padding: 36px 24px;">
                             <a href="https://smartmoveweb.azurewebsites.net" target="_blank" style="display: inline-block;">
-                                <img src="~/Content/images/logo.png" alt="Logo" border="0" width="48" style="display: block; width: 48px; max-width: 48px; min-width: 48px;">
+                                <img src="https://smartmoveweb.azurewebsites.net/Content/images/Logo_SmartMove.PNG" alt="Logo" border="0" style="display: block; width: 100px;  height: 80px;">
                             </a>
                         </td>
                     </tr>
@@ -142,7 +142,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 600px;">
                     <tr>
                         <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                            <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Reset Your Password</h1>
+                            <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Verify Your Email Address</h1>
                         </td>
                     </tr>
                 </table>
@@ -167,7 +167,7 @@
                     <!-- start copy -->
                     <tr>
                         <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
-                            <p style="margin: 0;">Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.</p>
+                            <p style="margin: 0;">Tap the button below to verify your email address. If you didn't create an account with <a href="https://smartmoveweb.azurewebsites.net">SmartMove</a>, you can safely delete this email.</p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -180,7 +180,7 @@
                                         <table border="0" cellpadding="0" cellspacing="0">
                                             <tr>
                                                 <td align="center" bgcolor="#11939A" style="border-radius: 6px;">
-                                                    <a href="https://smartmoveweb.azurewebsites.net" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Reset Password</a>
+                                                    <a href="<%verificationUrl%>" target="_blank" style="display: inline-block; padding: 16px 36px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; color: #ffffff; text-decoration: none; border-radius: 6px;">Verify Email</a>
                                                 </td>
                                             </tr>
                                         </table>
@@ -194,7 +194,7 @@
                     <tr>
                         <td align="left" bgcolor="#ffffff" style="padding: 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 16px; line-height: 24px;">
                             <p style="margin: 0;">If that doesn't work, copy and paste the following link in your browser:</p>
-                            <p style="margin: 0;"><a href="https://smartmoveweb.azurewebsites.net" target="_blank">https://same-link-as-button.url/xxx-xxx-xxxx</a></p>
+                            <p style="margin: 0;"><a href="<%verificationUrl%>" target="_blank"><%verificationUrl%></a></p>
                         </td>
                     </tr>
                     <!-- end copy -->
@@ -228,7 +228,7 @@
                     <!-- start permission -->
                     <tr>
                         <td align="center" bgcolor="#e9ecef" style="padding: 12px 24px; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; font-size: 14px; line-height: 20px; color: #666;">
-                            <p style="margin: 0;">You received this email because we received a request for password reset for your account. If you didn't request password reset you can safely delete this email.</p>
+                            <p style="margin: 0;">You received this email because you have registered for an account with SmartMove. If you didn't register for an account you can safely delete this email.</p>
                         </td>
                     </tr>
                     <!-- end permission -->
