--- a/SmartMoveWebApp/Views/Shared/_TruckOwnersLayout.cshtml
+++ b/SmartMoveWebApp/Views/Shared/_TruckOwnersLayout.cshtml
@@ -71,21 +71,16 @@
                                                 }
                                             </div>
                                         </li>
-                                        <li class="nav-item">
-                                            <a href="@Url.Action("Trips", "TruckOwners")" class="nav-link" id="menu_item_1" aria-selected="true">
-                                                <h5>My Trips</h5>
-                                            </a>
-                                        </li>
                                         <li class="nav-item active">
                                             <a href="@Url.Action("Dashboard", "TruckOwners")" class="nav-link" id="menu_item_2" aria-selected="false">
                                                 <h5>Profile</h5>
                                             </a>
                                         </li>
-                                        @*<li class="nav-item">
-                                            <a class="nav-link" id="menu_item_3" href="@Url.Action("Payment", "TruckOwners")" aria-selected="false">
-                                                <h5>Payment Type</h5>
+                                        <li class="nav-item">
+                                            <a href="@Url.Action("Trips", "TruckOwners")" class="nav-link" id="menu_item_1" aria-selected="true">
+                                                <h5>My Bids</h5>
                                             </a>
-                                        </li>*@
+                                        </li>
                                         <li class="nav-item">
                                             <a class="nav-link" id="menu_item_4" href="@Url.Action("ShareWithFriend", "TruckOwners")" aria-selected="false">
                                                 <h5>Share With Friend</h5>
