--- a/SmartMoveWebApp/Views/TruckOwners/EditProfile.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/EditProfile.cshtml
@@ -194,6 +194,21 @@
                 $(this).val($(this).val().replace(/(\d{3})\-?(\d{3})\-?(\d{4})/, '$1-$2-$3'))
             });
 
+            $("#ZipCode").keyup(function () {
+                let val = $(this).val();
+                if (val.length > 5) {
+                    let digits = val.split(/(\d{1,5})/);
+                    let str = "";
+                    for (let group of digits) {
+                        if (/^\d+$/.test(group)) {
+                            str += group + "-";
+                        }
+                    }
+                    str = str.substring(0, str.length - 1);
+                    $(this).val(str);
+                }
+            });
+
             $('#myMenu.nav.nav-tabs li.nav-item.active').removeClass('active');
             $("#menu_item_2").parent("li").addClass('active');
         });
