--- a/SmartMoveWebApp/Views/TruckOwners/Login.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Login.cshtml
@@ -50,3 +50,12 @@
     </div>
 </section>
 <!--== Login Page Content End ==-->
+@section  Scripts
+{
+    <script>
+        $(document).ready(function(){
+            $('nav.mainmenu ul li.active').removeClass('active');
+            $("#signinLink").addClass('active');
+        });
+    </script>
+}
