--- a/SmartMoveWebApp/Views/Customers/MyTrips.cshtml
+++ b/SmartMoveWebApp/Views/Customers/MyTrips.cshtml
@@ -9,11 +9,11 @@
 <div class="col-lg-9">
     <div class="tab-content" id="myTabContent">
         <!-- My Trips  start -->
-        <div class="tab-pane fade show active" id="team_member_1" role="tabpanel" aria-labelledby="tab_item_1">
+        <div class="tab-pane fade show active" id="my_trips" role="tabpanel" aria-labelledby="tab_item_1">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="team-member-info">
-                        <table class="table table-bordered text-center">
+                    <div>
+                        <table class="table mytrips-table text-center">
                             <tr class="side-menu">
                                 <th>Date Added</th>
                                 <th>Pickup</th>
