--- a/SmartMoveWebApp/Views/TruckOwners/Trips.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Trips.cshtml
@@ -11,10 +11,10 @@
         <div class="tab-pane fade show active" id="team_member_1" role="tabpanel" aria-labelledby="tab_item_1">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="team-member-info">
-                        <table class="table table-bordered text-center">
+                    <div>
+                        <table class="table mytrips-table text-center">
                             <tr class="side-menu">
-                                <th>Added Date</th>
+                                <th>Date Added</th>
                                 <th>No of Hours</th>
                                 <th>No of Trips</th>
                                 <th>Delivery Date</th>
