Added Average Rating to C & D

--- a/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
@@ -69,6 +69,12 @@
                             <div class="col-lg-4">
                                 <p>@Model.State</p>
                             </div>
+                            <div class="col-lg-2">
+                                <h5>Average Rating</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.AverageRating</p>
+                            </div>
                         </div>
                     </div>
                 </div>
