--- a/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
@@ -67,6 +67,12 @@
                             <div class="col-lg-4">
                                 <p>@Model.State</p>
                             </div>
+                            <div class="col-lg-2">
+                                <h5>Average Rating</h5>
+                            </div>
+                            <div class="col-lg-4">
+                                <p>@Model.AverageRating</p>
+                            </div>
                         </div>
                         <div class="row col-lg-12 profile-title">
                             <h4>Truck Information</h4>
