--- a/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/Customers/Dashboard.cshtml
@@ -73,7 +73,7 @@
                                 <h5>Average Rating</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>@Model.AverageRating</p>
+                                <p>@Model.AverageRating/5</p>
                             </div>
                         </div>
                     </div>
