--- a/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
+++ b/SmartMoveWebApp/Views/TruckOwners/Dashboard.cshtml
@@ -71,7 +71,7 @@
                                 <h5>Average Rating</h5>
                             </div>
                             <div class="col-lg-4">
-                                <p>@Model.AverageRating</p>
+                                <p>@Model.AverageRating/5</p>
                             </div>
                         </div>
                         <div class="row col-lg-12 profile-title">
