Final Demo updates and bug fixes

--- a/SmartMoveWebApp/Views/Home/About.cshtml
+++ b/SmartMoveWebApp/Views/Home/About.cshtml
@@ -23,7 +23,7 @@
                 <div class="display-table">
                     <div class="display-table-cell">
                         <div class="about-content">
-                            <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way.</p>
+                            <p>SmartMove” is an application which was developed to provide an interactive online platform between truck drivers and customers. This application not only provides best and reliable services in household shifting and moving things from one place to another in a cost-effective way but at the same time, it also provides a work platform for all truck drivers who like to link with SmartMove. In contrast to traditional movers and packers system where moving charges are calculated based on the distance, SmartMove provides the facility of price bidding. Through our SmartMove android application, customers can issue a request for moving services. This request will be sent to all truck owners associated with the SmartMove. Active truck drivers will bid for the new request and provide an estimated price. After processing all the information, bids will be shown to the customer. A customer can select a driver who is the best match for their need. SmartMove makes sure that all things remain in a safe condition during transit and they will be delivered safely at their destination. After the successful delivery of goods and things, customer and driver both are suggested to rate their experience.</p>
                         </div>
                     </div>
                 </div>
