--- a/SmartMoveWebApp/Views/EmailTemplates/TripFinishedTemplate.html
+++ b/SmartMoveWebApp/Views/EmailTemplates/TripFinishedTemplate.html
@@ -142,7 +142,7 @@
                 <table border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width: 800px;">
                     <tr>
                         <td align="left" bgcolor="#ffffff" style="padding: 36px 24px 0; font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif; border-top: 3px solid #d4dadf;">
-                            <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Trip to deliver order <%orderID%> has been Completed.</h1>
+                            <h1 style="margin: 0; font-size: 32px; font-weight: 700; letter-spacing: -1px; line-height: 48px;">Trip to deliver order <%orderId%> has been Completed.</h1>
                         </td>
                     </tr>
                 </table>
