--- a/SmartMoveWebApp/Views/Home/Index.cshtml
+++ b/SmartMoveWebApp/Views/Home/Index.cshtml
@@ -52,9 +52,9 @@
                 <div class="display-table">
                     <div class="display-table-cell">
                         <div class="about-content">
-                            <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way. </p>
+                            <p>The SmartMove is intended to be used in the field of transportation as an aid tool for service seekers (customers) and service providers (truck drivers) for moving things from one place to another in a cost-effective way. The SmartMove application act as a mediator between customers and truck drivers. It compares all bids received from truck drivers and provides a list to the customer.</p>
 
-                            <p>SmartMove works according to the needs and requirement of the customers who request services and who accept a bids and provides to them data to make contact with qualified truck owners (and drivers) who provide the desired results. SmartMove makes sure that all goods remain in a safe condition during transit and they will be delivered safely at their destination.</p>
+                            <p>A customer can select a driver who is the best match for their need. SmartMove makes sure that all things remain in a safe condition during transit and they will be delivered safely at their destination. After the successful delivery of goods and things, customer and driver both are suggested to rate their experience.</p>
                             <div class="about-btn">
                                 <a href="@Url.Action("Contact", "Home")">Contact Us</a>
                             </div>
@@ -94,31 +94,31 @@
             <div class="col-lg-3 text-center">
                 <div class="service-item">
                     <h3>1. Side Menu</h3>
-                    <img alt="screnshot" src="~/Content/images/services/Side_Menu.png" class="text-center">
+                    <img alt="screnshot" src="~/Content/images/services/SS1.jpeg" class="text-center">
                 </div>
             </div>
             <!-- Single Service End -->
             <!-- Single Service Start -->
             <div class="col-lg-3 text-center">
                 <div class="service-item">
-                    <h3>2. Enter Location</h3>
-                    <img alt="screnshot" src="~/Content/images/services/Select_destination.png" class="text-center">
+                    <h3>2. Create Order</h3>
+                    <img alt="screnshot" src="~/Content/images/services/SS2.jpg" class="text-center">
                 </div>
             </div>
             <!-- Single Service End -->
             <!-- Single Service Start -->
             <div class="col-lg-3 text-center">
                 <div class="service-item">
-                    <h3>3. Select Best Deal</h3>
-                    <img alt="screnshot" src="~/Content/images/services/Select_deal.png" class="text-center">
+                    <h3>3. View Order History</h3>
+                    <img alt="screnshot" src="~/Content/images/services/SS3.jpeg" class="text-center">
                 </div>
             </div>
             <!-- Single Service End -->
             <!-- Single Service Start -->
             <div class="col-lg-3 text-center">
                 <div class="service-item">
-                    <h3>4. View Profile</h3>
-                    <img alt="screnshot" src="~/Content/images/services/User_Profile.png" class="text-center">
+                    <h3>4. Bids Received</h3>
+                    <img alt="screnshot" src="~/Content/images/services/SS4.jpg" class="text-center">
                 </div>
             </div>
             <!-- Single Service End -->
@@ -146,7 +146,7 @@
 
             <div class="col-lg-6 col-md-6 text-center">
                 <div class="single-pricing-table">
-                    <img alt="screnshot" src="~/Content/images/services/Select_destination.png" style="height:500px;" class="text-center">
+                    <img alt="screnshot" src="~/Content/images/services/SS2.jpg" style="height:500px;border: 1px solid;" class="text-center">
                 </div>
             </div>
 
